Hair Curves crash if no tool is selected #97774

Closed
opened 2022-05-02 15:32:53 +02:00 by kin malmin · 10 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-05-01 23:31, hash: a5644f9a28
Worked: (newest version of Blender that worked as expected)

Short description of error
The new hair system crashes blender if no tool is selected from the T Panel

Exact steps for others to reproduce the error

  1. Add the Curve Random object (It is under the Experimental tab )
  2. Withe the curve hair selected, go to the Sculpt Mode.
  3. Left click anywhere in the view port and blender will crash.
    broken hair.blend

[Based on the default startup or an attached .blend file (as simple as possible)]

I know this is an experimental tool, but still it need to not be fixed, and one easy solution is to have the 3d cursor as default selected in the T Panel.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-05-01 23:31, hash: `a5644f9a28` Worked: (newest version of Blender that worked as expected) **Short description of error** The new hair system crashes blender if no tool is selected from the T Panel **Exact steps for others to reproduce the error** 1. Add the Curve Random object (It is under the Experimental tab ) 2. Withe the curve hair selected, go to the Sculpt Mode. 3. Left click anywhere in the view port and blender will crash. [broken hair.blend](https://archive.blender.org/developer/F13045878/broken_hair.blend) [Based on the default startup or an attached .blend file (as simple as possible)] I know this is an experimental tool, but still it need to not be fixed, and one easy solution is to have the 3d cursor as default selected in the T Panel.
Author

Added subscriber: @DeadDrag0

Added subscriber: @DeadDrag0
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report.
I can confirm the crash.

blender.exe         :0x00007FF60EF11B40  paint_stroke_new C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.c:919
blender.exe         :0x00007FF60EE98580  blender::ed::sculpt_paint::sculpt_curves_stroke_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\curves_sculpt_ops.cc:153
blender.exe         :0x00007FF60CCD4E60  wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1386
blender.exe         :0x00007FF60CCCFF20  wm_handler_operator_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2400
blender.exe         :0x00007FF60CCD35D0  wm_handlers_do_keymap_with_keymap_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2770
blender.exe         :0x00007FF60CCD27A0  wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3095
blender.exe         :0x00007FF60CCD0C80  wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3235
blender.exe         :0x00007FF60CCCC280  wm_event_do_region_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3653
blender.exe         :0x00007FF60CCCB4A0  wm_event_do_handlers_area_regions C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3683
blender.exe         :0x00007FF60CCCA120  wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3879
blender.exe         :0x00007FF60CC9F380  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:626
blender.exe         :0x00007FF60CC96DD0  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:551
blender.exe         :0x00007FF6101E08C0  invoke_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79
blender.exe         :0x00007FF6101E0670  __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
blender.exe         :0x00007FF6101E0650  __scrt_common_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331
blender.exe         :0x00007FF6101E0980  mainCRTStartup d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17
KERNEL32.DLL        :0x00007FF8CB227020  BaseThreadInitThunk
ntdll.dll           :0x00007FF8CCA82630  RtlUserThreadStart```
Thanks for the report. I can confirm the crash. ```lines=10 blender.exe :0x00007FF60EF11B40 paint_stroke_new C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.c:919 blender.exe :0x00007FF60EE98580 blender::ed::sculpt_paint::sculpt_curves_stroke_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\curves_sculpt_ops.cc:153 blender.exe :0x00007FF60CCD4E60 wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1386 blender.exe :0x00007FF60CCCFF20 wm_handler_operator_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2400 blender.exe :0x00007FF60CCD35D0 wm_handlers_do_keymap_with_keymap_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2770 blender.exe :0x00007FF60CCD27A0 wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3095 blender.exe :0x00007FF60CCD0C80 wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3235 blender.exe :0x00007FF60CCCC280 wm_event_do_region_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3653 blender.exe :0x00007FF60CCCB4A0 wm_event_do_handlers_area_regions C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3683 blender.exe :0x00007FF60CCCA120 wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3879 blender.exe :0x00007FF60CC9F380 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:626 blender.exe :0x00007FF60CC96DD0 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:551 blender.exe :0x00007FF6101E08C0 invoke_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79 blender.exe :0x00007FF6101E0670 __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 blender.exe :0x00007FF6101E0650 __scrt_common_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331 blender.exe :0x00007FF6101E0980 mainCRTStartup d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17 KERNEL32.DLL :0x00007FF8CB227020 BaseThreadInitThunk ntdll.dll :0x00007FF8CCA82630 RtlUserThreadStart```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Bug in new feature could be set to High prio I guess (even if experimental).
Question is probably why there is no tool selected in the first place?

Bug in new feature could be set to High prio I guess (even if experimental). Question is probably why there is no tool selected in the first place?
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

I think there is missing versioning from the renaming of some of the brushes.

I think there is missing versioning from the renaming of some of the brushes.

This issue was referenced by bff9bf728e

This issue was referenced by bff9bf728e1623ac01ef0230d86832592796b6d3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-05-05 12:52:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97774
No description provided.