Fix T97774: don't crash when no brush is selected